--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
    <h1>EKG Monitor</h1> 
    <button id="bigButton" >Connect</button>
    <script src="index.js"></script>
-   <div id="curve_chart" style="width: 900px; height: 500px"></div>
+   
+   <div id="curve_chart" style=" height: 400px"></div>
    
 </body>
 </html>
