add console to html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
    <script src="index.js"></script>
    
    <div id="curve_chart" style=" height: 400px"></div>
+
+    <h3>Live Output</h3>
+    <div id="output" class="output">
+        <div id="content"></div>
+        <div id="status"></div>
+        <pre id="log"></pre>
+    </div>
    
 </body>
 </html>
