working version of ecg signal and battery level on website

--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
    
    <div id="curve_chart" style=" height: 400px"></div>
 
-    <h3>Live Output</h3>
-    <div id="output" class="output">
-        <div id="content"></div>
-        <div id="status"></div>
-        <pre id="log"></pre>
-    </div>
+   <h3 id="BatteryLevel">Battery Level: 0%</h3>
    
 </body>
 </html>
